[metadata]
name = plover_number_format
version = 0.0.1
description = Formats numbers in the specified format.
long_description = file:README.md
long_description_content_type = text/markdown
author = Volensia
license = MIT
url = https://github.com/Volensia/plover_number_format
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
py_modules =
	plover_number_format

[options.entry_points]
plover.meta =
	number_format_insert = plover_number_format:number_format_insert
	number_format_roman = plover_number_format:number_format_roman
	retro_insert_currency = plover_number_format:retro_insert_currency